Ozhaev Zaynudin Game.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:62:24: warning: narrowing conversion of '(((rand() % 1070) / 2) + 535)' from 'int' to 'double' inside { } [-Wnarrowing]
     Ball ball1 = { W/2 + rand() % W/2 ,  rand() % H, 0, 0,
                        ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:62:49: warning: narrowing conversion of '(rand() % 650)' from 'int' to 'double' inside { } [-Wnarrowing]
     Ball ball1 = { W/2 + rand() % W/2 ,  rand() % H, 0, 0,
                                                 ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:68:30: warning: narrowing conversion of '((rand() % 1070) / 2)' from 'int' to 'double' inside { } [-Wnarrowing]
     Ball ball2 = { rand() % W/2,  rand() % H, 0, 0,
                              ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:68:42: warning: narrowing conversion of '(rand() % 650)' from 'int' to 'double' inside { } [-Wnarrowing]
     Ball ball2 = { rand() % W/2,  rand() % H, 0, 0,
                                          ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:74:33: warning: narrowing conversion of '(rand() % 650)' from 'int' to 'double' inside { } [-Wnarrowing]
     Ball ball3 = { W/2,  rand() % H, 0, 0,
                                 ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:171:34: error: too few arguments to function 'double pow(double, double)'
         i += sqrt (pow (ball3 .vx) + pow (ball3 .vy));
                                  ^
In file included from C:\Users\zainu\Desktop\курс\TX\TXLib.h:855:0,
                 from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1,
                 from C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:1:
c:\users\zainu\desktop\курс\codeblocks\mingw\include\math.h:156:24: note: declared here
 _CRTIMP double __cdecl pow (double, double);
                        ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:171:52: error: too few arguments to function 'double pow(double, double)'
         i += sqrt (pow (ball3 .vx) + pow (ball3 .vy));
                                                    ^
In file included from C:\Users\zainu\Desktop\курс\TX\TXLib.h:855:0,
                 from c:\users\zainu\desktop\курс\codeblocks\mingw\include\txlib.h:1,
                 from C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:1:
c:\users\zainu\desktop\курс\codeblocks\mingw\include\math.h:156:24: note: declared here
 _CRTIMP double __cdecl pow (double, double);
                        ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void CollisionBall(Ball*, Ball*)':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:323:48: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
      double d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d = 0.01; // гипотенуза
                                                ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:334:28: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         if ((Vn1 - Vn2) == 0) Vn1 = Vn1 + 0.01;
                            ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:348:44: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt (Dx*Dx + Dy*Dy); if (d == 0) d = 0.01;
                                            ^
---------------------------------------------------------------------------------------------
[05.07.2021  0:42:45,92 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\Game> g++.exe "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp" -o "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
